# App

./: CMakeLists.txt  README.md  Textbox.cpp  Textbox.hpp  main.cpp
inc/: Blocks.hpp  Platforma.hpp  Textbox.hpp  func.hpp
src/: Blocks.cpp  Platforma.cpp  Textbox.cpp  func.cpp
